-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs21
-
Component/s: infrastructure
-
b05
-
generic
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2208147 | 7 | Coleen Phillimore | P3 | Closed | Fixed | b135 |
After my fix for 6840152: "JVM crashes when heavyweight monitors are used", I can't compile a c2-only build (non-tiered) since UseFastLocking isn't defined.
- backported by
-
JDK-2208147 Can't build with FORCE_TIERED=0
-
- Closed
-
- relates to
-
JDK-6840152 JVM crashes when heavyweight monitors are used
-
- Closed
-