7022999: Can't build with FORCE_TIERED=0

Put UseFastLocking test under #ifdef COMPILER1

Reviewed-by: kvn, phh, never, dcubed